--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -23,7 +23,6 @@
     outline-offset: 2px;
 }
 
-html,
 body {
     overflow-x: hidden;
 }
