--- a/src/styles/layout/_services.scss
+++ b/src/styles/layout/_services.scss
@@ -19,7 +19,7 @@
     }
 
     &__item {
-        max-height: px-to-rem(280);
+        flex-wrap: wrap;
     }
 
     &__wrapper {
@@ -27,11 +27,10 @@
         height: px-to-rem(64);
     }
 
-    &__description {
-        &-text {
-            color: $link-text-inactive;
-            @extend %grayscale-50;
-        }
+    &__description-text {
+        color: $link-text-inactive;
+        @extend %grayscale-50;
+        @include truncate(3);
     }
 
     &__blur {
@@ -39,11 +38,6 @@
     }
 
     @include media-up(map.get($map: $screen-size, $key: 'medium')) {
-        &__item {
-            max-width: px-to-rem(288);
-            max-height: px-to-rem(443);
-        }
-
         &__blur {
             display: block;
             position: absolute;
@@ -57,6 +51,14 @@
             filter: blur(px-to-rem(150));
             z-index: -1;
         }
+
+        &__description-text {
+            @include truncate(4);
+        }
+
+        &__item {
+            max-width: px-to-rem(288);
+        }
     }
 
     @include media-up(map.get($map: $screen-size, $key: 'large')) {
@@ -67,8 +69,11 @@
         }
 
         &__item {
-            &:last-child {
-                display: none;
+            display: none;
+
+            &:first-child,
+            &:first-child + &:nth-child(2) {
+                display: flex;
             }
         }
 
